#7725 - overflow issue

--- a/sites/all/themes/slac/sass/pages.scss
+++ b/sites/all/themes/slac/sass/pages.scss
@@ -108,7 +108,6 @@ header {
 
 .region-header {
   float: right;
-  overflow: hidden;
   .block {
     float: left;
   }
